test/simple/ill-typed/mu_x_x.caprice
(* TEST 
  include refutable;
*)

(* ERROR: this type is not contractive *)
let _ : (mu x. x) -> list unit = fun x -> x
